Fix dark mode background color

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,7 +17,7 @@
 
 @layer base {
   body {
-    @apply bg-zinc-50 dark:bg-zinc-800;
+    @apply bg-zinc-50 dark:bg-zinc-900;
   }
 }
 
